mudança no nome e favicon

--- a/src/app/components/shared/profile-header/profile-header.component.html
+++ b/src/app/components/shared/profile-header/profile-header.component.html
@@ -38,7 +38,7 @@
       <h1
         class="text-5xl lg:text-6xl font-black text-transparent bg-clip-text bg-gradient-to-r from-fuchsia-400 via-purple-400 to-pink-400 mb-2 tracking-tight animate-gradient"
       >
-        OpsMilly
+        OpsMily
       </h1>
       <!-- Estrela decorativa animada -->
       <div class="absolute -top-2 -right-8 text-2xl animate-bounce">✨</div>
